# obs-panel

./: README.md  components.json  next.config.js  package-lock.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
@BACKUP/info/: page.tsx
@BACKUP/record/: layout.tsx  page.tsx
@BACKUP/stream/: page.tsx
libdev_v2.1.0_2_240415/libdev_v2.1.0_2/OBSBOT_Sample/: CMakeLists.txt
libdev_v2.1.0_2_240415/libdev_v2.1.0_2/include/dev/: dev.hpp
libdev_v2.1.0_2_240415/libdev_v2.1.0_2/macos/x86_64-release/: libdev.0.dylib
libdev_v2.1.0_2_240415/libdev_v2.1.0_2/windows/win64-release/: w32-pthreads.lib
sdk/obsbot_tiny_2/libdev_v2.1.0_2/OBSBOT_Sample/: main.cpp
sdk/obsbot_tiny_2/libdev_v2.1.0_2/macos/x86_64-release/: OBSBOT_Sample
sdk/obsbot_tiny_2/libdev_v2.1.0_2/windows/win64-debug/: libdev.lib
src/: actions.ts  default.tsx  middleware.ts  store.ts
src/app/: layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/audio/: layout.tsx  page.tsx
src/app/dashboard/info/: layout.tsx  page.tsx
src/app/dashboard/new/: layout.tsx
src/app/dashboard/record/: layout.tsx  page.tsx
src/app/dashboard/scenes/: layout.tsx  page.tsx
src/app/dashboard/stream/: layout.tsx  page.tsx
src/app/dashboard/video/: layout.tsx
src/components/: AppCard.tsx  Card.tsx  Disconnected.tsx  SystemResources.tsx  audio-dashboard.tsx  bottom-nav-with-settings.tsx  countdown-timer.tsx  dropdown.tsx  footer.tsx  header.tsx  log-window.tsx  navbar-with-tabs-and-icons.tsx  navbar.tsx  obs-dashboard-with-stats.tsx  obs-recording-dashboard.tsx  obs-scenes-dashboard.tsx  obs-streaming-dashboard.tsx  obs-websocket-dashboard.tsx  scene-preview.tsx
src/components/ui/: @button.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  toast.tsx  toaster.tsx
src/hooks/: obs.ts  useConnect.ts  useLocalStorage.ts  useScene.ts  useServerSettings.ts  useSource.ts  useSourceScreenshot.ts  useToast.ts
src/lib/: utils.ts
src/providers/: ReactQueryProvider.tsx  connection.tsx  index.tsx  scene.tsx
src/services/: asyncFuncs.ts  event-actions.ts  obs.ts
src/store/: connection.ts  connectionStore.ts  infoStore.ts  input.ts  recordStore.ts  scene.ts  sceneStore.ts  sourceStore.ts  store.ts  streamStore.ts
